// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoComplete Should render Autocomplete 1`] = `
.InputLabel-module__input-label___u-ovg {
  color: inherit;
  display: block;
  font-weight: 700;
  margin: var(--qtm-spacing-xsmall) 0 0;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c0 {
  position: relative;
  color: #424242;
}

.c1 {
  position: relative;
}

.c2 {
  margin-top: 8px;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="InputLabel-module__input-label___u-ovg"
      for=""
    />
    <input
      aria-autocomplete="both"
      aria-expanded="false"
      aria-owns="autocompleteOptions"
      autocomplete="off"
      class="TextInput-module__text-input___VCylJ c2"
      id=""
      name=""
      placeholder="Select an option"
      role="combobox"
      style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
      type="text"
      value=""
    />
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="c3"
    role="status"
  >
    Digite uma ou mais letras para expandir os resultados. 5 estão disponiveis.
  </div>
</div>
`;

exports[`AutoComplete Should render Autocomplete with dark skin 1`] = `
.InputLabel-module__input-label___u-ovg {
  color: inherit;
  display: block;
  font-weight: 700;
  margin: var(--qtm-spacing-xsmall) 0 0;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

.c0 {
  position: relative;
  color: #ffffff;
}

.c1 {
  position: relative;
}

.c2 {
  margin-top: 8px;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="InputLabel-module__input-label___u-ovg"
      for=""
    />
    <input
      aria-autocomplete="both"
      aria-expanded="false"
      aria-owns="autocompleteOptions"
      autocomplete="off"
      class="TextInput-module__text-input___VCylJ TextInput-module__text-input-dark___TrWzt c2"
      id=""
      name=""
      placeholder="Select an option"
      role="combobox"
      style="--icon-size: var(--qtm-spacing-large); --icon-area: calc(var(--qtm-spacing-medium) + var(--icon-size) + var(--qtm-spacing-xsmall));"
      type="text"
      value=""
    />
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="c3"
    role="status"
  >
    Digite uma ou mais letras para expandir os resultados. 5 estão disponiveis.
  </div>
</div>
`;
